package com.firstgroup.secondhand.utils

object TestTag {
    // Home Screen
    const val FAKE_SEARCH_BAR = "FAKE_SEARCH_BAR"
    const val BANNER_SECTION = "BANNER_SECTION"
    const val CATEGORY_SECTION = "CATEGORY_SECTION"
    const val PRODUCT_LIST_SECTION = "PRODUCT_LIST_SECTION"

    // Authentication Screen
    const val LOGIN_TITLE = "LOGIN_TITLE"
    const val EMAIL_TEXT_FIELD = "EMAIL_TEXT_FIELD"
    const val PASSWORD_TEXT_FIELD = "PASSWORD_TEXT_FIELD"
    const val PASSWORD_VISIBILITY_TOGGLE = "PASSWORD_VISIBILITY_TOGGLE"
    const val LOGIN_BUTTON = "LOGIN_BUTTON"
}